/styletwo Designations.jsp convert from inline css to external css

--- a/webapps/styletwo/css/styles.css
+++ b/webapps/styletwo/css/styles.css
@@ -48,6 +48,7 @@ margin-bottom:5px;
 margin-top:5px;
 padding:5px;
 border:1px solid black;
+overflow:auto;
 }
 .error
 {
@@ -60,6 +61,31 @@ height:auto;
 margin:5px;
 text-align:center;
 border:1px solid footer;
+}
+
+table.designation-view-table {
+  border: 5px solid black;
+}
+
+.designation-view-table th.add-new-designation-header {
+  text-align:right;
+  padding: 5px;
+}
+.designation-view-table th.s-no {
+  width:60px;
+  text-align:center;
+}
+.designation-view-table th.designation {
+  width:200px;
+  text-align:center;
+}
+.designation-view-table th.edit {
+  width:80px;
+  text-align:center;
+}
+.designation-view-table th.delete {
+  width:80px;
+  text-align:center;
 }
 
 
