--- a/webapps/styletwo/css/styles.css
+++ b/webapps/styletwo/css/styles.css
@@ -20,9 +20,19 @@ padding:5px;
 }
 .brand-name
 {
+float:left;
 margin-top:9px;
 margin-bottom:9px;
 font-size:20pt;
+}
+.user-panel
+{
+margin-left:1100px;
+}
+.user-icon
+{
+width:24px;
+height:24px;
 }
 .content
 {
